--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,7 @@ h1 {
   background-color: var(--red);
   padding: 1rem;
   height: auto;
+  margin: auto;
   min-height: 200px;
 }
 
@@ -76,7 +77,7 @@ h1 {
   border: solid var(--blue);
   padding: 1rem;
   width: 100%;
-  max-width: 1200px;
+  max-width: 800px;
   color: var(--blue);
   margin: 1rem auto;
   background-color: var(--red);
@@ -91,6 +92,7 @@ h1 {
   color: var(--blue);
   text-align: center;
   margin-bottom: 1rem;
+  margin: auto;
 }
 
 a {
