--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@
 body {
   background-color: var(--red);
   color: var(--blue);
-  background-image: url("/images/nett.png"), url("/images/nett.png"), url("/images/nett.png"), url("/images/nett2.png"), url("/images/bg.png");
+  background-image: url("/images/nett.png"), url("/images/nett.png"), url("/images/nett.png"), url("/images/nett2.png");
   background-repeat: no-repeat, no-repeat, no-repeat, no-repeat, repeat;
   background-position: 0% 100%,0% 0%,100% 0%,100% 100%,top left;
   background-size: 15%;
